--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+pspnet/weights/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -49,6 +51,9 @@ coverage.xml
 # Translations
 *.mo
 *.pot
+
+
+
 
 # Django stuff:
 *.log
