--- a/config/sdn.yaml
+++ b/config/sdn.yaml
@@ -69,61 +69,61 @@ connection:
    server: local
    port: 30021
 
- #
- # -
- #  from:
- #   server: pelican01
- #   port: 30001
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 30001
- # -
- #  from:
- #   server: pelican02
- #   port: 30001
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 30001
- # -
- #  from:
- #   server: pelican03
- #   port: 30001
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 30001
- # -
- #  from:
- #   server: pelican04
- #   port: 30001
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 30001
- #
- # -
- #  from:
- #   server: pelican01
- #   port: 50022
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 22
- # -
- #  from:
- #   server: pelican02
- #   port: 50022
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 22
- # -
- #  from:
- #   server: pelican03
- #   port: 50022
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 22
- # -
- #  from:
- #   server: pelican04
- #   port: 50022
- #  to:
- #   server: star_gpu_on_star_lab
- #   port: 22
+
+ -
+  from:
+   server: pelican01
+   port: 30001
+  to:
+   server: local
+   port: 30001
+ -
+  from:
+   server: pelican02
+   port: 30001
+  to:
+   server: local
+   port: 30001
+ -
+  from:
+   server: pelican03
+   port: 30001
+  to:
+   server: local
+   port: 30001
+ -
+  from:
+   server: pelican04
+   port: 30001
+  to:
+   server: local
+   port: 30001
+
+ -
+  from:
+   server: pelican01
+   port: 50022
+  to:
+   server: local
+   port: 22
+ -
+  from:
+   server: pelican02
+   port: 50022
+  to:
+   server: local
+   port: 22
+ -
+  from:
+   server: pelican03
+   port: 50022
+  to:
+   server: local
+   port: 22
+ -
+  from:
+   server: pelican04
+   port: 50022
+  to:
+   server: local
+   port: 22
