--- a/config/sdn.yaml
+++ b/config/sdn.yaml
@@ -38,6 +38,11 @@ client:
   host: guxiang.net.cn
   port: 22
   <<: *account_02
+ -
+  name: hystad_mysql
+  host: 10.215.3.15
+  port: 22
+  <<: *account_02  
 # -
 #  name: star_gpu_local
 #  host: localhost
@@ -51,6 +56,7 @@ client_type:
     - pelican04
   db:
     - guxi_jp
+#    - hystad_mysql    
   core:
 #    - star_gpu_on_star_lab
 #    - star_gpu_local
